Fixed footer floating in middle of page, set About page backstretch image to live in default position between 768 and 1000px and updated Press Releases page to not show "view article" if no PDF or Link is present

--- a/wp-content/themes/hmr-theme/assets/css/less/app.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/app.less
@@ -725,6 +725,11 @@
 			width:100%;
 		}
 	}
+	body.about {
+		.backstretch img {
+			top: 0 !important;
+		}
+	}
 }
 
 @media (max-width:901px) and (min-width:768px) { 
