--- a/wp-content/themes/hmr-theme/assets/css/less/views/team.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/views/team.less
@@ -240,8 +240,13 @@
 		height:570px;
 	}
 	#wrap {
-		max-height:100%;
-		height:100%;
+		//max-height:100%;
+		//height:100%;
+	}
+	.post-type-archive-team {
+		.content-info {
+			margin-top:0;
+		}
 	}
 	.single-team {
 		#wrap {
